--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,60 @@
-body {
+*, *::after, *::before {
+  box-sizing: border-box;
+  
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  
+  font-weight: normal;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-size: 62.5% ;
+}
+
+body {
+  overflow: hidden;
+  font-size: 1.8rem;
+  
+  max-width: 1200px;
+  
+  margin: 5rem auto;
+
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
+
+  @media only screen and (max-width: 330px){
+    
+  }
+}
+
+
+a, a:visited, a:hover, a:active {
+  outline: none;
+  text-decoration: none;
+  cursor: pointer;
+  color: inherit;
+}
+
+textarea {
+  resize: none;
+  outline: none;
+}
+
+input {
+  outline: none;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  width: 100%;
+}
+
+button {
+  border: 0;
+  outline: 0;
+  background-color: #fff;
+  font: inherit;
 }
