--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,10 @@ html {
 }
 
 body {
-  overflow: hidden;
   font-size: 1.8rem;
   
   max-width: 1200px;
+  min-height: 100vh;
   
   margin: 5rem auto;
 
