--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@ body {
   font-size: 1.8rem;
   
   max-width: 1200px;
+
+  min-width: 266px;
+  
   min-height: 100vh;
   
   margin: 5rem auto;
@@ -22,8 +25,8 @@ body {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 
 
-  @media only screen and (max-width: 330px){
-    
+  @media only screen and (max-width: 576px){
+    max-width: 576px;
   }
 }
 
